attempting to fix spacing

--- a/css/swerve/titlepage.css
+++ b/css/swerve/titlepage.css
@@ -500,7 +500,7 @@ section[data-type="titlepage"] *[class*="TitlepageAuthorNameau"] + *[class*="Tit
 
 section[data-type="titlepage"] *[class*="TitlepageAuthorNameau"]:last-of-type,
 section[data-type="titlepage"] *[class*="TitlepageAuthorNameau"] + *[class*="TitlepageAuthorNameau"]:last-of-type {
-	margin-bottom: 64pt;
+	margin-bottom: 128pt;
 }
 
 section.anthology *[class*="TitlepageAuthorNameau"] {
